<resources>
    <string name="app_name">NFC Configuration</string>
    <string name="no_data">(no data)</string>
    <string name="sensor_info">Sensor info:</string>
    <string name="sensor_type">Sensor type:</string>
    <string name="data_placeholder">Really detailed data . . . </string>
    <string name="name">Name:</string>
    <string name="pan_id">PAN ID:</string>
    <string name="channel">Channel:</string>
    <string name="help_text">Really detailed help section . . .</string>
    <string name="edit_config">Edit Config</string>
    <string name="edit_configuration">Edit Configuration</string>
    <string name="flash">Flash</string>
    <string name="enter_serial_number">
        For security purposes, please enter the serial number\nof this device:
    </string>
    <string name="config_directions">Touch any value to edit its contents.</string>
    <string name="serial_hint">0000000000</string>
    <string name="five_digit_blank">00000</string>
    <string name="approach_tag_now">Approach Device</string>
    <string name="cancel">Cancel</string>
    <string name="write_configuration">Write Configuration</string>
    <string name="press_flash_before_approaching_device">Press "FLASH" before approaching device</string>
    <string name="name_required">A name is required</string>
    <string name="name_too_long">Name cannot exceed 32 characters</string>
    <string name="pan_id_required">A PAN ID is required</string>
    <string name="channel_required">A channel is required</string>
    <string name="serial_number_required">A serial number is required</string>
    <string name="pan_id_too_long">PAN ID cannot exceed 65535</string>
    <string name="channel_too_long">Channel cannot exceed 65535</string>
    <string name="tag_read_success">Configuration read successfully</string>
    <string name="tag_write_success">Configuration written successfully</string>
    <string name="got_data">Got data:\n</string>
    <string name="page">Page </string>
    <string name="data_tab_label">Data</string>
    <string name="config_tab_label">Config</string>
    <string name="help_tab_label">Help</string>
    <string name="fields_dont_match">One or more fields were not updated successfully</string>
    <string name="something_went_wrong">
        Something has gone very wrong. Try scanning the tag again.
        If the issue persists, please file a bug report.
    </string>
    <string name="name_parse_error">!!NAME PARSE ERROR!!</string>
    <string name="name_must_be_ascii">Name must be ASCII</string>
    <string name="tag_write_failed">Failed to write tag</string>
</resources>
