<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridLayout
                    android:id="@+id/datatab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/sensor_info"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/datatab_sensor_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/sensor_type"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/datatab_sensor_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_columnSpan="10"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/datatab_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_columnSpan="10"
                        android:text="@string/data_placeholder"
                        android:textSize="20sp"/>

                </GridLayout>

                <GridLayout
                    android:id="@+id/configtab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/sensor_info"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/configtab_sensor_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/sensor_type"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/configtab_sensor_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_columnSpan="10"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/sensor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/pan_id"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/panid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="5"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/chanel"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="5"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_data"
                        android:textSize="20sp"/>
                </GridLayout>

                <LinearLayout
                    android:id="@+id/helptab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/help_text" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>